[package]
name = "auth_context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = "4.3.19"
serde_json = "1.0.104"
regex = "1.9.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
crypto = { version = "0.5.1", features = ["digest"] }
sha2 = "0.10.7"
uuid = { version = "1.4.1", features = [ "v4", "fast-rng", "macro-diagnostics"] }
jsonwebtoken = "8.3.0"
chrono = "0.4.26"
rand = "0.8.5"
base64 = "0.21.2"

